<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">mangel.io</string>
    <string name="prompt_email">E-Mail</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Einloggen</string>
    <string name="invalid_email">Bitte geben Sie Ihre E-Mail ein.</string>
    <string name="password_too_short">Passwort zu kurz.</string>
    <string name="unknown_email">Diese E-Mail wurde nicht gefunden.</string>
    <string name="password_wrong">Das Passwort ist nicht korrekt.</string>
    <string name="outdated_application">Der Login ist mit dieser Version der Anwendung leider nicht mehr möglich. Bitte
        lade das Update vom Store herunter.
    </string>
    <string name="generic_api_error">Die App kann nicht mit dem Server kommunizieren. Versuche es später noch einmal,
        und stelle sicher, dass die neueste Version der Anwendung installiert ist.
    </string>
    <string name="no_internet_access">Eine Verbindung mit dem Internet ist nicht möglich.</string>
    <string name="welcome">Willkommen, %s!</string>
    <string name="construction_site">Baustelle</string>
    <string name="abnahmemodus">Abnahmemodus</string>
    <string name="abnahmemodus_description">Im Abnahmemodus werden nur die Pendenzen angezeigt, die auch im Abnahmemodus
        erfasst wurden.
    </string>
    <string name="action_create_trial_account">Probekonto erstellen</string>
    <string name="or">oder</string>
    <string name="trial_account_created">Ihr Probeaccount wurde erstellt."</string>
    <string name="trial_account_help">Besuchen Sie uns unter www.app.mangel.io um die in der App erfassen Pendenzen
        weiter zu verwalten. \n\n
        Dazu brauchen Sie die folgenden Zugangsdaten: \n
        Benutzername: %s\n
        Passwort: %s
    </string>
    <string name="please_login">Bitte einloggen</string>
    <string name="login_with_email">Benutzen Sie Ihre Geschäftsmail.</string>
    <string name="refresh">aktualisieren</string>
    <string name="logout">ausloggen</string>
    <string name="sync_finished">Aktualisierung abgeschlossen.</string>
    <string name="sync_failed">Aktualisierung fehlgeschlagen. Überprüfe die Internetverbindung.</string>
    <string name="title_map_list">Maps</string>
    <string name="title_map_detail">Map Detail</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
